--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header>
@@ -302,37 +302,37 @@
       <!-- /TEAM -->
 
       <!-- CLIENTS -->
-      <section class="section clients">
-        <div class="container">
-          <h2 class="clients-title">Nasi klienci</h2>
-          <div class="clients-list">
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+      <section class="section">
+        <div class="container clients">
+          <h2 class="clients__title">Nasi klienci</h2>
+          <div class="clients__item">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-1"></use>
               </svg>
             </a>
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-2"></use>
               </svg>
             </a>
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-3"></use>
               </svg>
             </a>
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-4"></use>
               </svg>
             </a>
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-5"></use>
               </svg>
             </a>
-            <a class="client-link" href="#" target="_blank">
-              <svg class="client-icon" width="106px" height="60px">
+            <a class="clients__link" href="#" target="_blank">
+              <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo-6"></use>
               </svg>
             </a>
