added sass styling + bem methodology for team section

--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
       <!-- /WHAT WE DOING -->
 
       <!-- TEAM -->
-      <section class="section team">
+      <section class="section section--silver">
         <div class="container">
-          <div class="team-content">
-            <h2 class="head-caption">Nasz zespół</h2>
-            <ul class="team-list">
-              <li class="team-item">
+          <div class="team">
+            <h2 class="team__title">Nasz zespół</h2>
+            <ul class="team__list">
+              <li class="team__item">
                 <figure>
                   <img src="images/product_designer.jpg" width="270" height="260" alt="John Doe" />
                   <figcaption>
-                    <h3 class="team-description-header">John Doe</h3>
-                    <p class="team-description-text">Product Designer</p>
+                    <h3 class="team__description team__description--name">John Doe</h3>
+                    <p class="team__description team__description--text">Product Designer</p>
                     <div class="team-description-links">
                       <a class="team-social-link" href="#" target="_blank">
                         <svg class="team-social-icon" width="20" height="20">
@@ -197,7 +197,7 @@
                   </figcaption>
                 </figure>
               </li>
-              <li class="team-item">
+              <li class="team__item">
                 <figure>
                   <img
                     src="images/frontend_developer.jpg"
@@ -206,8 +206,8 @@
                     alt="John Doe"
                   />
                   <figcaption>
-                    <h3 class="team-description-header">John Doe</h3>
-                    <p class="team-description-text">Frontend Developer</p>
+                    <h3 class="team__description team__description--name">John Doe</h3>
+                    <p class="team__description team__description--text">Frontend Developer</p>
                     <div class="team-description-links">
                       <a class="team-social-link" href="#" target="_blank">
                         <svg class="team-social-icon" width="20" height="20">
@@ -233,12 +233,12 @@
                   </figcaption>
                 </figure>
               </li>
-              <li class="team-item">
+              <li class="team__item">
                 <figure>
                   <img src="images/marketing.jpg" width="270" height="260" alt="John Doe" />
                   <figcaption>
-                    <h3 class="team-description-header">John Doe</h3>
-                    <p class="team-description-text">Marketing</p>
+                    <h3 class="team__description team__description--name">John Doe</h3>
+                    <p class="team__description team__description--text">Marketing</p>
                     <div class="team-description-links">
                       <a class="team-social-link" href="#" target="_blank">
                         <svg class="team-social-icon" width="20" height="20">
@@ -264,12 +264,12 @@
                   </figcaption>
                 </figure>
               </li>
-              <li class="team-item">
+              <li class="team__item">
                 <figure>
                   <img src="images/ui_designer.jpg" width="270" height="260" alt="John Doe" />
                   <figcaption>
-                    <h3 class="team-description-header">John Doe</h3>
-                    <p class="team-description-text">UI Designer</p>
+                    <h3 class="team__description team__description--name">John Doe</h3>
+                    <p class="team__description team__description--text">UI Designer</p>
                     <div class="team-description-links">
                       <a class="team-social-link" href="#" target="_blank">
                         <svg class="team-social-icon" width="20" height="20">
