--- a/index.html
+++ b/index.html
@@ -172,24 +172,24 @@
                   <figcaption>
                     <h3 class="team__description team__description--name">John Doe</h3>
                     <p class="team__description team__description--text">Product Designer</p>
-                    <div class="team-description-links">
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                    <div class="social">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -208,24 +208,24 @@
                   <figcaption>
                     <h3 class="team__description team__description--name">John Doe</h3>
                     <p class="team__description team__description--text">Frontend Developer</p>
-                    <div class="team-description-links">
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                    <div class="social">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -239,24 +239,24 @@
                   <figcaption>
                     <h3 class="team__description team__description--name">John Doe</h3>
                     <p class="team__description team__description--text">Marketing</p>
-                    <div class="team-description-links">
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                    <div class="social">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -270,24 +270,24 @@
                   <figcaption>
                     <h3 class="team__description team__description--name">John Doe</h3>
                     <p class="team__description team__description--text">UI Designer</p>
-                    <div class="team-description-links">
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                    <div class="social">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
-                      <a class="team-social-link" href="#" target="_blank">
-                        <svg class="team-social-icon" width="20" height="20">
+                      <a class="social__link" href="#" target="_blank">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
