added sass styling + bem methodology for offers section

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
       <!-- /ADVANTAGES -->
 
       <!-- WHAT WE DOING -->
-      <section class="section offers">
+      <section class="section section--top-fix">
         <div class="container">
-          <div class="offer-content">
-            <h2 class="head-caption">Czym się zajmujemy</h2>
-            <ul class="offer-list">
-              <li class="offer-item">
+          <div class="offers">
+            <h2 class="offers__title">Czym się zajmujemy</h2>
+            <ul class="offers__list">
+              <li class="offers__item">
                 <img
                   src="images/create_application.jpg"
                   width="370"
@@ -132,9 +132,9 @@
                   alt="Tworzenie aplikacji - foto"
                   title="Tworzenie aplikacji"
                 />
-                <h3 class="offer-title">Aplikacje komputerowe</h3>
+                <h3 class="offers__subtitle">Aplikacje komputerowe</h3>
               </li>
-              <li class="offer-item">
+              <li class="offers__item">
                 <img
                   src="images/test_application.jpg"
                   width="370"
@@ -142,9 +142,9 @@
                   alt="Testowanie aplikacji na telefonie - foto"
                   title="Testowanie aplikacji na telefonie"
                 />
-                <h3 class="offer-title">Aplikacje mobilne</h3>
+                <h3 class="offers__subtitle">Aplikacje mobilne</h3>
               </li>
-              <li class="offer-item">
+              <li class="offers__item">
                 <img
                   src="images/graphic_design.jpg"
                   width="370"
@@ -152,7 +152,7 @@
                   alt="Projektowanie grafiki - foto"
                   title="Projektowanie grafiki"
                 />
-                <h3 class="offer-title">Rozwiązania graficzne</h3>
+                <h3 class="offers__subtitle">Rozwiązania graficzne</h3>
               </li>
             </ul>
           </div>
