added sass styling + bem methodology for advantages section

--- a/index.html
+++ b/index.html
@@ -62,58 +62,60 @@
       <!-- /HERO -->
 
       <!-- ADVANTAGES -->
-      <section class="section advantages">
+      <section class="section">
         <div class="container">
-          <ul class="advantage-list">
-            <li class="advantage-item">
-              <div class="advantage-icon">
-                <svg width="70" height="70">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title">Lorem, ipsum</h3>
-              <p class="advantage-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales ui. Interdum et malesuada
-              </p>
-            </li>
-            <li class="advantage-item">
-              <div class="advantage-icon">
-                <svg width="70" height="70">
-                  <use href="./images/icons.svg#icon-clock"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title">Lorem, ipsum</h3>
-              <p class="advantage-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales ui. Interdum et malesuada
-              </p>
-            </li>
-            <li class="advantage-item">
-              <div class="advantage-icon">
-                <svg width="70" height="70">
-                  <use href="./images/icons.svg#icon-diagram"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title">Lorem, ipsum</h3>
-              <p class="advantage-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales ui. Interdum et malesuada
-              </p>
-            </li>
-            <li class="advantage-item">
-              <div class="advantage-icon">
-                <svg width="70" height="70">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
-                </svg>
-              </div>
-              <h3 class="advantage-title">Lorem, ipsum</h3>
-              <p class="advantage-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales ui. Interdum et malesuada
-              </p>
-            </li>
-          </ul>
+          <div class="advantages">
+            <ul class="advantages__list">
+              <li class="advantages__item">
+                <div class="advantages__icon">
+                  <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </div>
+                <h3 class="advantages__title">Lorem, ipsum</h3>
+                <p class="advantages__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                  sodales ui. Interdum et malesuada
+                </p>
+              </li>
+              <li class="advantage-item">
+                <div class="advantages__icon">
+                  <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </div>
+                <h3 class="advantages__title">Lorem, ipsum</h3>
+                <p class="advantages__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                  sodales ui. Interdum et malesuada
+                </p>
+              </li>
+              <li class="advantage-item">
+                <div class="advantages__icon">
+                  <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </div>
+                <h3 class="advantages__title">Lorem, ipsum</h3>
+                <p class="advantages__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                  sodales ui. Interdum et malesuada
+                </p>
+              </li>
+              <li class="advantage-item">
+                <div class="advantages__icon">
+                  <svg width="70" height="70">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </div>
+                <h3 class="advantages__title">Lorem, ipsum</h3>
+                <p class="advantages__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                  sodales ui. Interdum et malesuada
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- /ADVANTAGES -->
