added sass styling + bem methodology for projects section

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,206 +73,208 @@
 
         <!-- PROJECTS -->
         <div class="container">
-          <ul class="project-list">
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/technocrack.jpg"
-                    width="370"
-                    height="294"
-                    title="Technocrack - Strona internetowa "
-                    alt="Technocrack - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Technocrack</h3>
-                  <p class="project-description-text">Strona internetowa</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/graph_no_vs_gs.jpg"
-                    width="370"
-                    height="294"
-                    title="Grafika New Orlean vs Golden Star - Dizajn"
-                    alt="Grafika New Orlean vs Golden Star - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Grafika New Orlean vs Golden Star</h3>
-                  <p class="project-description-text">Dizajn</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/restaurant_seafood.jpg"
-                    width="370"
-                    height="294"
-                    title="Restauracja Seafood - Aplikacja"
-                    alt="Restauracja Seafood - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Restauracja Seafood</h3>
-                  <p class="project-description-text">Aplikacja</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/proj_prime.jpg"
-                    width="370"
-                    height="294"
-                    title="Projekt Prime - Marketing"
-                    alt="Projekt Prime - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Projekt Prime</h3>
-                  <p class="project-description-text">Marketing</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/proj_boxes.jpg"
-                    width="370"
-                    height="294"
-                    title="Projekt Boxes - Aplikacja"
-                    alt="Projekt Boxes - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Projekt Boxes</h3>
-                  <p class="project-description-text">Aplikacja</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/webpage_inspiration.jpg"
-                    width="370"
-                    height="294"
-                    title="Inspiration has no Borders - Strona internetowa"
-                    alt="Inspiration has no Borders - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Inspiration has no Borders</h3>
-                  <p class="project-description-text">Strona internetowa</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/magazine.jpg"
-                    width="370"
-                    height="294"
-                    title="Magazyn Limited Edition - Dizajn"
-                    alt="Magazyn Limited Edition - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Magazyn Limited Edition</h3>
-                  <p class="project-description-text">Dizajn</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/proj_lab.jpg"
-                    width="370"
-                    height="294"
-                    title="Projekt LAB - Marketing"
-                    alt="Projekt LAB - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Projekt LAB</h3>
-                  <p class="project-description-text">Marketing</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li tabindex="0" class="project-item">
-              <figure>
-                <div class="project-photo">
-                  <img
-                    src="./images/app_growing_business.jpg"
-                    width="370"
-                    height="294"
-                    title="Growing Business - Aplikacja"
-                    alt="Growing Business - foto"
-                  />
-                  <p class="project-overlay">
-                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                    koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                    niezabezpieczone serwery konkurencji
-                  </p>
-                </div>
-                <figcaption class="project-description">
-                  <h3 class="project-description-header">Growing Business</h3>
-                  <p class="project-description-text">Aplikacja</p>
-                </figcaption>
-              </figure>
-            </li>
-          </ul>
+          <div class="project">
+            <ul class="project__list">
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/technocrack.jpg"
+                      width="370"
+                      height="294"
+                      title="Technocrack - Strona internetowa "
+                      alt="Technocrack - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Technocrack</h3>
+                    <p class="project__description">Strona internetowa</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/graph_no_vs_gs.jpg"
+                      width="370"
+                      height="294"
+                      title="Grafika New Orlean vs Golden Star - Dizajn"
+                      alt="Grafika New Orlean vs Golden Star - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Grafika New Orlean vs Golden Star</h3>
+                    <p class="project__description">Dizajn</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/restaurant_seafood.jpg"
+                      width="370"
+                      height="294"
+                      title="Restauracja Seafood - Aplikacja"
+                      alt="Restauracja Seafood - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Restauracja Seafood</h3>
+                    <p class="project__description">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/proj_prime.jpg"
+                      width="370"
+                      height="294"
+                      title="Projekt Prime - Marketing"
+                      alt="Projekt Prime - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Projekt Prime</h3>
+                    <p class="project__description">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/proj_boxes.jpg"
+                      width="370"
+                      height="294"
+                      title="Projekt Boxes - Aplikacja"
+                      alt="Projekt Boxes - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Projekt Boxes</h3>
+                    <p class="project__description">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/webpage_inspiration.jpg"
+                      width="370"
+                      height="294"
+                      title="Inspiration has no Borders - Strona internetowa"
+                      alt="Inspiration has no Borders - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Inspiration has no Borders</h3>
+                    <p class="project__description">Strona internetowa</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/magazine.jpg"
+                      width="370"
+                      height="294"
+                      title="Magazyn Limited Edition - Dizajn"
+                      alt="Magazyn Limited Edition - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Magazyn Limited Edition</h3>
+                    <p class="project__description">Dizajn</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/proj_lab.jpg"
+                      width="370"
+                      height="294"
+                      title="Projekt LAB - Marketing"
+                      alt="Projekt LAB - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Projekt LAB</h3>
+                    <p class="project__description">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li tabindex="0" class="project__item">
+                <figure>
+                  <div class="project__photo">
+                    <img
+                      src="./images/app_growing_business.jpg"
+                      width="370"
+                      height="294"
+                      title="Growing Business - Aplikacja"
+                      alt="Growing Business - foto"
+                    />
+                    <p class="project__photo project__photo--overlay">
+                      Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                  <figcaption class="project__specification">
+                    <h3 class="project__title">Growing Business</h3>
+                    <p class="project__description">Aplikacja</p>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- /PROJECTS -->
