added sass styling + bem methodology for filters section

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,25 +48,27 @@
 
     <main>
       <!-- FILTERS -->
-      <section class="section projects">
+      <section class="section">
         <div class="container">
-          <ul class="filter-list">
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Wszystkie</button>
-            </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Strony</button>
-            </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Aplikacje</button>
-            </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Dizajn</button>
-            </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Marketing</button>
-            </li>
-          </ul>
+          <div class="filters">
+            <ul class="filters__list">
+              <li class="filters__item">
+                <button type="button" class="button filters__button">Wszystkie</button>
+              </li>
+              <li class="filters__item">
+                <button type="button" class="button filters__button">Strony</button>
+              </li>
+              <li class="filters__item">
+                <button type="button" class="button filters__button">Aplikacje</button>
+              </li>
+              <li class="filters__item">
+                <button type="button" class="button filters__button">Dizajn</button>
+              </li>
+              <li class="filters__item">
+                <button type="button" class="button filters__button">Marketing</button>
+              </li>
+            </ul>
+          </div>
 
           <!-- /FILTERS -->
         </div>
