added sass styling + bem methodology for logo section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container header">
         <nav>
           <a class="logo" href="index.html" title="Strona główna">
-            <span class="logo-trademark-color">Web</span>Studio</a
+            Web<span class="logo logo--black">Studio</span></a
           >
           <ul class="menu-list">
             <li class="menu-item">
@@ -348,7 +348,7 @@
       <div class="footer-content container">
         <div class="footer-address">
           <a class="logo" href="index.html" title="Strona główna">
-            <span class="logo-trademark-color">Web</span>Studio</a
+            Web<span class="logo logo--white">Studio</span></a
           >
           <address>
             <span class="address-item">m. Warszawa, Aleje Jerozolimskie 21</span>
