--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
       <div class="container header">
         <nav>
           <a class="logo" href="index.html" title="Strona główna">
-            <span class="logo-trademark-color">Web</span>Studio</a
+            Web<span class="logo logo--black">Studio</span></a
           >
           <ul class="menu-list">
             <li class="menu-item"><a class="menu-link" href="./index.html">Agencja</a></li>
@@ -89,8 +89,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -111,8 +111,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -133,8 +133,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -155,8 +155,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -177,8 +177,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -199,8 +199,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -221,8 +221,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -243,8 +243,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -265,8 +265,8 @@
                     />
                     <p class="project__photo project__photo--overlay">
                       Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
-                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
-                      niezabezpieczone serwery konkurencji
+                      koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
                     </p>
                   </div>
                   <figcaption class="project__specification">
@@ -286,7 +286,7 @@
       <div class="footer-content container">
         <div class="footer-address">
           <a class="logo" href="index.html" title="Strona główna">
-            <span class="logo-trademark-color">Web</span>Studio</a
+            Web<span class="logo logo--white">Studio</span></a
           >
           <address>
             <span class="address-item">m. Warszawa, Aleje Jerozolimskie 21</span>
