--- a/portfolio.html
+++ b/portfolio.html
@@ -320,12 +320,12 @@
           </div>
         </div>
 
-        <div class="footer-newsletter">
-          <h4 class="footer-newsletter-tittle">Zapisz się do newslettera</h4>
+        <div class="newsletter">
+          <h4 class="newsletter__tittle">Zapisz się do newslettera</h4>
           <form action="" name="newsletter-form">
             <label for="">
-              <input type="email" name="email" id="email" placeholder="E-mail" class="newsletter" />
-              <button type="submit" class="btn newsletter-btn">
+              <input type="email" name="email" id="email" placeholder="E-mail" class="newsletter__input" />
+              <button type="submit" class="button newsletter__button">
                 <span>Zapisz się</span>
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
