--- a/index.html
+++ b/index.html
@@ -356,26 +356,27 @@
             <a class="address-link" href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
-        <div class="footer-social">
-          <p class="footer-social-title">Dołącz do nas</p>
-          <div class="footer-social-links">
-            <a class="footer-social-link" href="#" target="_blank">
-              <svg class="footer-social-icon" width="20px" height="20px">
+
+        <div class="social social--footer">
+          <p class="social__title social__title--footer">Dołącz do nas</p>
+          <div class="social__links">
+            <a class="social__link social__link--footer" href="#" target="_blank">
+              <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
-            <a class="footer-social-link" href="#" target="_blank">
-              <svg class="footer-social-icon" width="20px" height="20px">
+            <a class="social__link social__link--footer" href="#" target="_blank">
+              <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
-            <a class="footer-social-link" href="#" target="_blank">
-              <svg class="footer-social-icon" width="20px" height="20px">
+            <a class="social__link social__link--footer" href="#" target="_blank">
+              <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
-            <a class="footer-social-link" href="#" target="_blank">
-              <svg class="footer-social-icon" width="20px" height="20px">
+            <a class="social__link social__link--footer" href="#" target="_blank">
+              <svg width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
@@ -386,7 +387,13 @@
           <h4 class="newsletter__tittle">Zapisz się do newslettera</h4>
           <form action="" name="newsletter-form">
             <label for="">
-              <input type="email" name="email" id="email" placeholder="E-mail" class="newsletter__input" />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+                class="newsletter__input"
+              />
               <button type="submit" class="button newsletter__button">
                 <span>Zapisz się</span>
                 <svg width="24" height="24">
