--- a/portfolio.html
+++ b/portfolio.html
@@ -283,7 +283,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-content container">
+      <div class="footer__flex container">
         <div class="footer-address">
           <a class="logo" href="index.html" title="Strona główna">
             Web<span class="logo logo--white">Studio</span></a
