added sass styling + bem methodology for address section

--- a/portfolio.html
+++ b/portfolio.html
@@ -284,14 +284,14 @@
 
     <footer class="footer">
       <div class="footer__flex container">
-        <div class="footer-address">
+        <div class="address">
           <a class="logo" href="index.html" title="Strona główna">
             Web<span class="logo logo--white">Studio</span></a
           >
-          <address>
-            <span class="address-item">m. Warszawa, Aleje Jerozolimskie 21</span>
-            <a class="address-link" href="mailto:info@example.com">info@example.com</a>
-            <a class="address-link" href="tel:+48111111111">+48 111 111 111</a>
+          <address class="address address--footer">
+            <span class="address__item">m. Warszawa, Aleje Jerozolimskie 21</span>
+            <a class="address__link" href="mailto:info@example.com">info@example.com</a>
+            <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
         <div class="social social--footer">
