Various minor fixes in the styling footer

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <div class="footer__flex container">
         <div class="address">
           <a class="logo" href="index.html" title="Strona główna">
-            Web<span class="logo logo--white">Studio</span></a
+            Web<span class="logo logo--white logo--footer">Studio</span></a
           >
           <address class="address address--footer">
             <span class="address__item">m. Warszawa, Aleje Jerozolimskie 21</span>
