--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <!-- HERO -->
       <section class="section hero">
         <div class="container">
-          <h1 class="hero-title">Efektywne rozwiązania dla waszego biznesu</h1>
-          <button type="button" class="btn hero-btn" data-modal-open>Zamów usługę</button>
+          <h1 class="hero__title">Efektywne rozwiązania dla waszego biznesu</h1>
+          <button type="button" class="button hero-btn" data-modal-open>Zamów usługę</button>
         </div>
       </section>
       <!-- /HERO -->
